# gpu-monitor

./: .gitignore  README.md  build_app.sh  config.example.json  package.sh  pyproject.toml  start.sh
.claude/: launch.json
gpumon/: __init__.py  alarms.py  config.py  names.py  poller.py  presets.py  probe.py  remote.py  server.py  setup.py  vpn.py
macapp/: __init__.py  gpumonitor.plist.template  menubar.py  setup_progress.swift
tests/: test_core.py
webui/: app.js  index.html  setup.html  setup.js  style.css
