[project]
name = "gpu-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "pyobjc-framework-cocoa>=12.2",
    "pyobjc-framework-webkit>=12.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
